<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Usage Monitor</string>
    <string name="title_activity">App Usage Monitor</string>
    <string name="menu_settings">Settings</string>
    <string name="blank_message"></string>
    <string name="button_start">Start Monitor</string>
    <string name="button_stop">Stop Monitor</string>
    <string name="button_restart">Clear all Data</string>
    <string name="button_time_range">Time Range</string>
    <string name="button_show_today">Show data for today.</string>
    <string name="button_show_24_hours">Show data for last 24 hours.</string>
    <string name="button_show_all">Show data for all history.</string>
    <string name="button_send_data">Share</string>
    <string name="button_sync_data">Sync Data</string>
    <string name="button_show_chart">Chart</string>
    <string name="button_show_log">Show Audit For Today</string>
    <string name="button_update_sync">Update Sync Account</string>
    <string name="button_view_options">Update View</string>
    <string name="title_activity_history_plot">HistoryPlotActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
