<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

	<item
		android:id="@+id/item_time_range"
		android:icon="@drawable/ic_menu_my_calendar"
		android:title="@string/button_time_range"
        android:showAsAction="ifRoom|withText"  >
        <menu>
            <item android:id="@+id/show_today"
                  android:title="@string/button_show_today" />
            <item android:id="@+id/show_24_hours"
                  android:title="@string/button_show_24_hours" />
            <item android:id="@+id/show_all"
                  android:title="@string/button_show_all" />
        </menu>
	</item>

    <item
		android:id="@+id/item_send_data"
		android:icon="@drawable/ic_menu_share_holo_light"
		android:title="@string/button_send_data"	
        android:showAsAction="ifRoom|withText"
        />

	<item
		android:id="@+id/item_view_options"
		android:title="@string/button_view_options"
        android:showAsAction="ifRoom|withText"  >
        <menu>
		    <item
				android:id="@+id/item_show_chart"
				android:title="@string/button_show_chart"	
		        android:showAsAction="ifRoom|withText" 
		        />
		
		    <item
		        android:id="@+id/item_show_log"
		        android:title="@string/button_show_log"   
		        android:showAsAction="ifRoom|withText" 
			    />
	    </menu>
    </item>
	
    <!--
	<item
	android:id="@+id/item_start"
	android:icon="@drawable/ic_media_play"
	android:title="@string/button_start"	
    android:showAsAction="ifRoom|withText"  
    />
	
	<item
		android:id="@+id/item_stop"
		android:icon="@drawable/ic_media_stop"
		android:title="@string/button_stop"	
        android:showAsAction="ifRoom|withText"
        />

	<item
		android:id="@+id/item_restart"
		android:icon="@drawable/ic_menu_delete"
		android:title="@string/button_restart" 
        android:showAsAction="ifRoom|withText"
        android:menuCategory="secondary" 
        android:orderInCategory="10" 
    />  
    -->

	<item
		android:id="@+id/item_add_sync_account"
		android:title="@string/button_update_sync"	
        android:showAsAction="ifRoom|withText"  
        />

</menu>